--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "add": "^2.0.6",
+    "axios": "^1.3.4",
     "i18next": "^21.8.14",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
