--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-shadow-cards": "^1.0.2",
+    "react-native-simple-toast": "^2.0.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^13.6.0",
     "react-native-swiper": "^1.6.0",
